# league-svc-rust

./: .env  .gitignore  Cargo.toml  Readme.md  deploy-to-backend.sh  places.json  sport_list.txt  sqlx-data.json
deploy/: Dockerfile
migrations/: 100_user.sql  1_league.sql  2_sport.sql  3_place.sql  4_player.sql  5_field.sql  6_sport_category.sql  7_league_player.sql  8_trust.sql
sql/field/: get.sql  insert.sql  update.sql
sql/league/: get.sql  get_by_country_limited.sql  get_by_league_player.sql  get_by_place_limited.sql  get_by_player_limited.sql  insert.sql  update.sql
sql/league_player/: get.sql  get_by_league.sql  get_by_league_and_player.sql  get_by_player.sql  insert.sql  update.sql
sql/place/: get.sql  get_all.sql  get_by_country.sql  get_by_sport_id.sql  insert.sql  update.sql
sql/player/: get.sql  get_by_league_player.sql  get_players_that_trust_trustee.sql  get_players_with_ids.sql  get_trusted_players_by_truster.sql  insert.sql  update.sql
sql/sport/: get.sql  get_all_ordered.sql  insert.sql  update.sql
sql/sport_category/: get.sql  get_all.sql
sql/trust/: delete.sql  get.sql  get_count_by_trustee.sql  get_count_by_truster.sql  insert.sql
src/: main.rs
src/dao/: field_dao.rs  league_dao.rs  league_player_dao.rs  main_dao.rs  mod.rs  place_dao.rs  player_dao.rs  sport_dao.rs  trust_dao.rs
src/domain/: field.rs  league.rs  league_player.rs  mod.rs  place.rs  player.rs  sport.rs  sport_category.rs  trust.rs
src/domain/enums/: league_player_status.rs
src/dto/: league.rs  league_player.rs  mod.rs  player.rs  player_dtos.rs  trust.rs
src/middleware/: base.rs  mod.rs  user_svc.rs
src/routes/: league.rs  league_player.rs  league_routes.rs  main_router.rs  mod.rs  place.rs  player.rs  player_routes.rs  sport.rs  trust.rs
src/service/: league.rs  league_player.rs  league_service.rs  mod.rs  place.rs  player.rs  player_service.rs  sport.rs  trust.rs
src/util/: authentication.rs  converter.rs  database.rs  env_util.rs  error_util.rs  from_row.rs  macros.rs  mod.rs  repeat_utils.rs  text_serializer.rs
src/validation/: mod.rs
src/validation/league/: mod.rs
src/validation/player/: mod.rs  player_validatior.rs
